--- a/manual/readme
+++ b/manual/readme
@@ -4,7 +4,7 @@ Una vez preparado el escenario, es necesario seguir los pasos del script Modulos
 
 A continuación se ejecuta como superususario el script:
 
-sudo su -c ModulosBasicos.sh
+sudo su -c ./ModulosBasicos.sh
 
 A continuación se ha de ejecutar el segundo script:
 
